--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwindcss-motion": "^1.1.0",
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
@@ -46,6 +47,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "embla-carousel-react": "^8.6.0",
+        "framer-motion": "^12.7.4",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
