--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "embla-carousel-react": "^8.6.0",
         "framer-motion": "^12.7.4",
         "globals": "^15.14.0",
+        "highlight.js": "^11.11.1",
         "html-react-parser": "^5.2.3",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
