--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "html-react-parser": "^5.2.3",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.5.0",
