--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.5.0",
+        "react-markdown": "^10.1.0",
+        "rehype-raw": "^7.0.0",
+        "remark-gfm": "^4.0.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
